--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -19,34 +19,43 @@
     <h2><strong>Latest Mars News</strong></h2>
     <p><b>{{mars.NewsTitle}}</b></p>
     <p>{{mars.NewsPara}}</p>
+
+
     <div class="row">
       <div class="col-md-6">
-
-
-    <h2><strong>Featured Mars Image</strong></h2>
-    <img src="{{mars.FeaturedImg}}"/>
+        <h2><strong>Featured Mars Image</strong></h2>
+        <img src="{{mars.FeaturedImg}}"/>
+      </div>
+    <div class="col-md-6" style="width:500px;height:500px">
+        <h2><strong>Mars Facts</strong></h2>
+        {{mars.MarsFacts|safe}}
     </div>
-    <div class="col-md-6">
-    <h2><strong>Mars Facts</strong></h2>
-    {{mars.MarsFacts|safe}}
-  </div>
-  </div>
 
+  </div>
   
- <div class="center">
-  <h2><strong>Mars Hemispheres</strong></h2>
-  <div class="row row-sm" style="width:800px">
-    
-    {%for hemisphere in mars.Hemispheres%}
-    <div class="col-md-6">
-    <img style="width:300px;height:300px"class="images-fluid float-left img-sml" src="{{hemisphere.image_url}}"/>
-    <h4><strong>{{hemisphere.title}}</strong></h4>
+  </div>
+
+  <div class="container text-center">
+    <h2><strong>Mars Hemispheres</strong></h2>
+    <div class="row row-sm" style="width:1200px">
+      
+      {%for hemisphere in mars.Hemispheres%}
+      <div class="col-md-6">
+      <img style="width:500px;height:500px" class="images-fluid img-sml" src="{{hemisphere.image_url}}"/>
+      <h4><strong>{{hemisphere.title}}</strong></h4>
+      </div>
+      {%endfor%}
     </div>
-    {%endfor%}
   </div>
-</div>
-  </div>
-  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+</body>
+
+</html>
+
 </body>
 
 </html>
